--- a/NewApp/android/app/src/main/res/values/styles.xml
+++ b/NewApp/android/app/src/main/res/values/styles.xml
@@ -1,9 +1,17 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="AppTheme" parent="Theme.ReactNative.AppCompat.Light.NoActionBar.FullScreen">
         <!-- Customize your theme here. -->
-        <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
+        <item name="android:windowDisablePreview">true</item>
+        <item name="android:windowBackground">#f3f3f3</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:navigationBarColor">#000000</item>
+        <item name="colorAccent">#000000</item>
+    </style>
+
+    <style name="SplashScreen" parent="Theme.ReactNative.AppCompat.Light.NoActionBar.FullScreen">
+        <item name="android:windowBackground">@drawable/launchscreen</item>
     </style>
 
 </resources>
